agregue invitacion a escribirme

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <p>
-      Hola a todos, este es mi sitio web, sigueme en linaorienta de twitter
-      si tienes dudas
+      Hola a todos, este es mi sitio web, sigueme en linaorienta de twitter, escribeme si tienes algunas dudas e inquietudes de mi perfil.
   </p>  
 </body>
 </html>
